# Star_Shuttle

./: .eslintrc.cjs  .gitignore  .prettierrc  1  AGENTS.md  CLAUDE.md  DEBUGGING.md  FIXES_SUMMARY.md  README.md  feature_requirements.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  test_socket_addr  test_socket_addr.rs  tsconfig.json  vite.config.ts  vitest.config.ts
doc/: bug  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  screenshot.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/ai/: agent.rs  agent_store.rs  agent_types.rs  chat.rs  client.rs  command_parser.rs  config.rs  context_collector.rs  mod.rs  orchestrator.rs  planner.rs  sandbox.rs  skills.rs  types.rs
src-tauri/src/modules/app_runtime/: mod.rs
src-tauri/src/modules/config/: mod.rs
src-tauri/src/modules/connection/: auth.rs  auth_mapping.rs  command_exec.rs  config.rs  config_store.rs  connect_helpers.rs  connect_probe.rs  credential_sync.rs  error.rs  flow.rs  keyboard_interactive.rs  known_hosts.rs  manager.rs  manager_shell.rs  mod.rs  ssh_connect.rs  ssh_impl.rs  ssh_impl_auth.rs  ssh_impl_forwarding.rs  ssh_impl_proxy.rs  telnet.rs  terminal_control.rs  terminal_exec.rs  tests.rs  tracking.rs  types.rs
src-tauri/src/modules/credential/: mod.rs
src-tauri/src/modules/db/: ai_store.rs  audit.rs  command_history.rs  command_snippets.rs  mod.rs
src-tauri/src/modules/error/: mod.rs
src-tauri/src/utils/: mod.rs
(+169 files in other folders)
