[package]
name = "ssh_remote_manager"
version = "0.1.0"
description = "Star Shuttle - A Tauri App for SSH connection management, terminal access, and file transfer"
authors = ["development team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ssh_remote_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["devtools"] }
tauri-plugin-log = "2"
russh = "0.40.0"
russh-sftp = "2.1.1"  # Latest stable version
russh-keys = "0.40.0"
keyring = "2.0.5"
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
thiserror = "1.0.56"
anyhow = "1.0.79"
fs2 = "0.4.3"
dirs = "5.0.1"
rand = "0.8.5"
futures = "0.3.30"
base64 = "0.21.7"
async-trait = "0.1.89"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
bcrypt = "0.18.0"
bytes = "1.11.1"
